<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/textViewText" />

    <Button
        android:id="@+id/button1"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button1Text"/>
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/editTextHint"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/readVal1Button"
            android:layout_width="0dp"
            android:text="@string/readVal1ButtonText"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/showVal1Button"
            android:layout_width="0dp"
            android:text="@string/showVal1ButtonText"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/readVal2Button"
            android:layout_width="0dp"
            android:text="@string/readVal2ButtonText"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/showVal2Button"
            android:layout_width="0dp"
            android:text="@string/showVal2ButtonText"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            tools:ignore="ButtonStyle" />
    </LinearLayout>



</LinearLayout>